# family

./: Cargo.toml
src/: error.rs  family_manager.rs  lib.rs  relationships.rs
src/commands/: adopt.rs  block.rs  children.rs  marry.rs  mod.rs  moderation.rs  parents.rs  partners.rs  relationship.rs  siblings.rs  tree.rs
src/commands/information/: children.rs  mod.rs  parents.rs  partner.rs  relationship.rs
src/components/: adopt.rs  marry.rs  mod.rs
